[Attempt] Fix hero button not working on mobile

--- a/styles/Button.module.css
+++ b/styles/Button.module.css
@@ -9,6 +9,7 @@
   transition: 0.1s ease-in all;
   margin: 35px 0;
   text-transform: capitalize;
+  z-index: 2;
 }
 .primaryButton:hover {
   cursor: pointer;
